fix some typos found by the debian packaging tools

--- a/doc/manpage/smpirun.1
+++ b/doc/manpage/smpirun.1
@@ -16,7 +16,7 @@ XML file describing the platform on which we want to deploy the program
 \fB\-hostfile\fR, \fB\-machinefile\fR <hostfile>
 Hostfile listing all the machines in use
 .SH SMPI OPTIONS
-The smpirun itself accepts some optionnal parameters, that are not to
+The smpirun itself accepts some optional parameters, that are not to
 be mixed with the configuration options described in the next section.
 
 .TP
@@ -50,7 +50,7 @@ statically against SimGrid, only the others.
 Activate the trace mechanism if available (equivalent to \fB--cfg\fR=\fItracing\fR:\fIyes\fR \fB--cfg\fR=\fItracing/smpi\fR:\fIyes\fR)
 .TP
 \fB\-trace-ti\fR
-Activate time independant tracing.
+Activate time independent tracing.
 .TP
 \fB\-trace-comment\fR <comment>
 Put a comment on the top of the trace file.
