--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+
+                    _               _____  _ _  _    _ ____  ___
+__   _____ _ __ ___(_) ___  _ __   |___ / / | || |  / | ___|/ _ \
+\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | || |_ | |___ \ (_) |
+ \ V /  __/ |  \__ \ | (_) | | | |  ___) || |__   _|| |___) \__, |
+  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|  |_|(_)_|____/  /_/
+               Dec 28 2016
+
+The Christmas Pi Release (better approximation).
+
+ * Fix various glitches in the previous release.
                     _               _____  _ _  _
 __   _____ _ __ ___(_) ___  _ __   |___ / / | || |
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | || |_
