--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+SimGrid (3.15) UNRELEASED; urgency=low
+
+ -- target_date=March 20 2017 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
+
 SimGrid (3.14.159) stable; urgency=low
 
  The previous release was only a crude approximation of a Pi release;
