--- a/ChangeLog
+++ b/ChangeLog
@@ -17,8 +17,10 @@ SimGrid (3.15) UNRELEASED; urgency=low
 
  S4U
  - New callbacks:
-   - simgrid::s4u::onPlatformCreated: right before the simulation starts
-   - simgrid::s4u::onSimulationEnd: right after the main simulation loop
+   - s4u::onPlatformCreated: right before the simulation starts
+   - s4u::onSimulationEnd: right after the main simulation loop
+   - s4u::Host::onSpeedChange: when the pstate is changed, or when an
+     event from the availability_file changes the avail speed.
  - Links are now usable from s4u
 
  -- target_date=March 20 2017 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
