--- a/ChangeLog
+++ b/ChangeLog
@@ -56,7 +56,10 @@ SimGrid (3.15) UNRELEASED; urgency=low
 
  XBT
  - Kill the fifo data container: we don't use it anymore.
- 
+
+ XML
+ - A <cluster> can now be created with different speed values to represent pstates.
+   see examples/platforms/energy_cluster.xml for an example.
  -- target_date=March 20 2017 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.14.159) stable; urgency=low
