start thinking about the release

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,16 @@
+                    _               _____  _ ____
+__   _____ _ __ ___(_) ___  _ __   |___ / / | ___|
+\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | |___ \
+ \ V /  __/ |  \__ \ | (_) | | | |  ___) || |___) |
+  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|____/
+               (not released yet)
 
+The Ever Green Release.
+
+ * Continuous integration tasks are green (no more transient errors)
+ * S4U pushed further, integrating more parts of SimDag.
+ * Start converting the SMPI internals to C++ too. TBC.
+ * Plus the usual bug fixes, cleanups and documentation improvements
                     _               _____  _ _  _    _ ____  ___
 __   _____ _ __ ___(_) ___  _ __   |___ / / | || |  / | ___|/ _ \
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | || |_ | |___ \ (_) |
