MSG_process_ref/unref: allow to fiddle with the process refcounting
This is useful to avoid that a process gets deleted before we're done
with it. This is what happened in the process-join example, where we
were joining the process after its end. So we have to increase its
refcount while it's still alive to make sure that it does not get
destroyed too early.

This would be automated in C++ with RAII but we are not there yet.

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ SimGrid (3.15) UNRELEASED; urgency=low
  - New: MSG_process_yield(). Stop and yield to other processes.
  - New: MSG_process_daemon(). Daemon processes are automatically killed 
    when the last non-daemon process terminates
+ - New: MSG_process_ref/unref(). Fiddle with the process refcounting.
  - Renamed MSG_energy_plugin_init() -> MSG_host_energy_plugin_init()
    to make room for the upcoming network energy plugin.
 
