--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,7 @@ SimGrid (3.15) UNRELEASED; urgency=low
    - s4u::Host::onSpeedChange: when the pstate is changed, or when an
      event from the availability_file changes the avail speed.
  - Links are now usable from s4u
+ - New: Engine::hostList() and Engine::hostCount(). Still clumsy.
  - Drop Host::getPstateSpeedCurrent() which dupplicates Host::speed()
 
  SimDag
