--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,7 @@ SimGrid (3.15) UNRELEASED; urgency=low
       Macros ensure the backwards compatibility, but you should fix your code
 
  SMPI
+ - Major C++ rewrite ongoing (SMPI used to be C compiled in C++). This can break codes that were using internals of SMPI (from private.h instead of the public smpi.h).
  - Bump our claim of support from MPI 1.1 to MPI 2.2. We don't support 100% of 
    it, but it should be enough. Contact us if not.
  - New algorithm for SMPI_SHARED_MALLOC: global, where all blocks are
@@ -56,7 +57,9 @@ SimGrid (3.15) UNRELEASED; urgency=low
  - RMA : MPI_Accumulate are applied in correct order, and 
    MPI_Win_complete or MPI_Win_post shouldn't miss messages anymore.
  - Better support for MPI_IN_PLACE
+ - Support for MPI_Win attrs and keyvals.
  - Support MPI_Comm_group_create, MPI_Type_size_x
+ - MPI ops should be properly applied to all allowed types
  - Replace implementation of MPI_Bcast "scatter followed by rdb allgather"
    algorithm by a non failing one from mpich.
 
