--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,7 @@ SimGrid (3.15) UNRELEASED; urgency=low
  - Major C++ rewrite ongoing (SMPI used to be C compiled in C++). This can break codes that were using internals of SMPI (from private.h instead of the public smpi.h).
  - Bump our claim of support from MPI 1.1 to MPI 2.2. We don't support 100% of 
    it, but it should be enough. Contact us if not.
+ - MPI_Win_lock/unlock support added (as for all RMA, implementation is naive and probably inaccurate)
  - New algorithm for SMPI_SHARED_MALLOC: global, where all blocks are
    mapped onto a unique file.
  - Bugfix : smpirun was sometimes misusing hostfile when wrongly terminated
