we will release today

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-SimGrid (3.15) UNRELEASED; urgency=low
+SimGrid (3.15) stable; urgency=low
 
  The Spring Release: continuous integration servers become green
  We fixed even the transient bugs on all target architectures:
@@ -86,7 +86,7 @@ SimGrid (3.15) UNRELEASED; urgency=low
  - A <cluster> can now be created with different speed values to represent pstates.
    see examples/platforms/energy_cluster.xml for an example.
 
- -- target_date=March 20 2017 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
+ -- Wed Mar 22 15:36:09 CET 2017 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.14.159) stable; urgency=low
 
