--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ __   _____ _ __ ___(_) ___  _ __   |___ / / | ___|
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | |___ \
  \ V /  __/ |  \__ \ | (_) | | | |  ___) || |___) |
   \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|____/
-               (not released yet)
+               Mar 22 2017
 
 The Spring Release: continuous integration servers become green.
 
