--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+                    _               _____  _  __
+__   _____ _ __ ___(_) ___  _ __   |___ / / |/ /_
+\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | '_ \
+ \ V /  __/ |  \__ \ | (_) | | | |  ___) || | (_) |
+  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|\___/
+               (not released yet)
+
                     _               _____  _ ____
 __   _____ _ __ ___(_) ___  _ __   |___ / / | ___|
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | |___ \
