--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@ SimDag
    simulation round, s/he has to allocate and free a dynar and use it as argument 
    to this function. The former SD_simulate (double how_long) now returns void.
 
+SMPI
+ - New algorithm to privatize globals: dlopen, with dynamic loading tricks
+
  -- Release target: June 21 2017   -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.15) stable; urgency=low
