--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,13 @@ SimGrid (3.16) UNRELEASED
   - FreeBSD: Disable SMPI mmap privatization, switch automatically to dlopen.
   - Mac, BSD: dlopen+thread broken, switch automatically to raw contexts.
 
+ XML platforms: Switch to platform v4.1 format.
+ * This is a backward compatible change: v4 are valid v4.1 files
+   - <zone> can be used as a synonym for the now deprecated <as>
+   - <zoneZoute> an be used as a synonym for the now deprecated <asroute>
+   - <bypassZoneRoute> an be used as a synonym for the now deprecated <bypassAsRoute>
+   - <actor> can be used as a synonym for the now deprecated <process>
+
  SimDag
   - New and Backwards Compatibility break: 
     SD_simulate_with_update (double how_long, xbt_dynar_t changed_tasks_dynar)
