--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,9 @@ SimGrid (3.16) UNRELEASED
     simulation round, s/he has to allocate and free a dynar and use it as argument 
     to this function. The former SD_simulate (double how_long) now returns void.
 
+ Virtual Machines
+  - Allow multicore VMs, along with the correct sharing computations
+
  MSG
   - The netzone are now available from the MSG API. 
     The old names still work, but are now deprecated.
